Adding default coords method

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
     </div>
 
     <!-- Js dependencies -->
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <!-- generated & minified project js -->
     <script type="text/javascript" src='build/js/scripts.min.js'></script>
+
+    <!-- Google maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=initMap"></script>
+
   </body>
 </html>
