Adding in basic zip code search groundwork. Adding modular src files.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       <!-- search-bar footer -->
       <div id="footer">
         <input class="form-control" type="number" id="zip-search" min='0' placeholder="Search by zip code">
+        <button id="search-submit" type="button" name="button">Search</button>
       </div>
     </div>
 
     <!-- Js dependencies -->
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/notifyjs/dist/notify.js"></script>
 
     <!-- generated & minified project js -->
     <script type="text/javascript" src='build/js/scripts.min.js'></script>
